...
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_detail_performers_title"
            tools:listitem="@layout/performer_item"/>

        <LinearLayout
            android:id="@+id/block_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/performerDetailRv">
...
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/album_detail_tracks_title" />

            <Button
                android:id="@+id/btnGoToAddTrackFromAlbum"
                style="Theme.MaterialComponents.DayNight.DarkActionBar"
                android:contentDescription="@string/add_track_to_album"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="0.88"
                android:drawableLeft="@drawable/add_circle_24dp_fill0_wght400_grad0_opsz24"
...
                android:textSize="19sp"
                android:tooltipText="Add track"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackDetailRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_track"
...
