...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.70"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/searchview_backgound"
                android:iconifiedByDefault="false"
...
