...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.album_detail.AlbumDetailFragment"
    android:id="@+id/artist_detail_layout">

    <LinearLayout
        android:id="@+id/detail_title_art"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="1dp"
        android:paddingStart="10dp"
...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBackArt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/purple_500"
                android:text="@string/x"
                android:textColor="@color/teal_700"
...
