...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/content_main"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
            app:layout_constraintTop_toBottomOf="@id/card_title" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
...
